--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,11 @@
 services:
   - type: web
     name: GroceryAPP
-    env: python
+    runtime: docker
     region: ohio
     plan: free
-    buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "cd backend && uvicorn main_with_auth:app --host 0.0.0.0 --port $PORT"
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11
       - key: DEBUG
         value: false
       - key: PYTHONUNBUFFERED
