--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ reportlab==4.0.8
 python-dotenv==1.2.1
 requests==2.31.0
 httpx==0.25.2
+itsdangerous==2.1.2
 
 # Logging
 python-json-logger==2.0.7
