--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ python-dotenv==1.2.1
 requests==2.31.0
 httpx==0.25.2
 itsdangerous==2.1.2
+email-validator==2.1.1
 
 # Logging
 python-json-logger==2.0.7
