--- a/frontend/flutter/smartkirana_mobile/pubspec.yaml
+++ b/frontend/flutter/smartkirana_mobile/pubspec.yaml
@@ -43,7 +43,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_linter: ^3.0.0
+  flutter_lints: ^3.0.0
   json_serializable: ^6.7.0
   build_runner: ^2.4.6
 
