--- a/frontend/flutter/smartkirana_mobile/pubspec.yaml
+++ b/frontend/flutter/smartkirana_mobile/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
   # State Management
-  provider: ^6.4.0
+  provider: ^6.1.5+1
 
   # HTTP & Networking
   http: ^1.1.0
